fixed unwanted  horizontal scrolling and zoom out, need add more  projects, add footer, almost done

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Poiret One', 'Roboto', 'Oxygen',
@@ -7,7 +8,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 html{
-  background: rgb(136,175,217)
+  background: rgb(136,175,217);
+  max-width: 100vw;
+  overflow-x:clip;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -50,7 +53,8 @@ h1{
 }
 
 .header{
-  width:100vh;
+  width:100vw;
+  overflow-x:clip;
   height:25vh;
   padding: 2.5vh;
 }
@@ -176,9 +180,11 @@ h1{
 
 #container {
   position:relative;
+  width:100vw;
 }
 #contents {
   background:rgb(136,175,217);
+  width:100vw;
 }
 #gradient {
   position:absolute;
